--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "gulp-jshint": "~1.11.2",
         "gulp-rename": "~1.2.2",
         "gulp-uglify": "~1.4.1",
-        "jshint-stylish": "~2.0.1"
+        "jshint-stylish": "~2.0.1",
+        "gulp-zip": "~3.2.0"
     }
 }
